fire onAdsComplete when ads is empty

--- a/example/simple.html
+++ b/example/simple.html
@@ -16,6 +16,7 @@
 
             <div class="vast-contentroll" style="background-color: red; width: 640px; height: 480px;"
                  data-debug="true"
+                 data-collapse="true"
                  data-vast="https://pubads.g.doubleclick.net/gampad/ads?sz=580x400&iu=/4492059/clutch_content_ros&ciu_szs=580x400&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&url=[referrer_url]&description_url=[description_url]&correlator=[timestamp]"></div>
 
         </div>
