set player attr playsinline to true

--- a/example/mobile.html
+++ b/example/mobile.html
@@ -10,7 +10,8 @@
 
 <div id="container">
 
-    <div class="vast-contentroll" style="background-color: red; width: 640px; height: 480px;"
+    <div class="vast-contentroll"
+         style="background-color: red; width: 640px; height: 480px;"
          data-debug="true"
          data-responsive="true"
          data-collapse="true"
